--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "apikey": "YOURAPIKEY"
   },
   "options": {
-    "autoRead": false,
+    "autoRead": true,
     "self": false,
     "mute": false,
     "limitCount": 20,
